# Chartify_Pro_Rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-windows.yml
src/: main.rs  ppt.rs
src/charts/: mod.rs  plotter.rs  renderer.rs
src/data/: loader.rs  mod.rs  processor.rs
src/gui/: app.rs  chart_viewer.rs  control_panel.rs  mod.rs
src/stats/: calculator.rs  mod.rs
